[gd_scene load_steps=18 format=3 uid="uid://cw5wsoamgbn6l"]

[ext_resource type="Script" uid="uid://bejmaj3o3px4p" path="res://code/battery.gd" id="1_bavnn"]
[ext_resource type="ArrayMesh" uid="uid://b4x175jby3tef" path="res://battery.obj" id="2_ytmnr"]
[ext_resource type="Texture2D" uid="uid://bya6h62mohojm" path="res://lightningbolt.png" id="3_y10rp"]
[ext_resource type="Texture2D" uid="uid://bw0wyhqi1t1xq" path="res://rotate_ccw.png" id="4_op1cn"]

[sub_resource type="BoxMesh" id="BoxMesh_y3gtc"]
size = Vector3(3, 0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_a63ku"]
albedo_color = Color(0.190762, 0.190762, 0.190762, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7fgwr"]
albedo_color = Color(0.122252, 0.122252, 0.122252, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kssdw"]
albedo_color = Color(0.194349, 0.194349, 0.194349, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ytmnr"]
top_radius = 0.81
bottom_radius = 0.81

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_op1cn"]
transparency = 1
albedo_texture = ExtResource("3_y10rp")
uv1_scale = Vector3(1, 2, 1)
uv1_offset = Vector3(1.6, 0, 0)
texture_filter = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_op1cn"]
size = Vector3(2.8, 1, 0.8)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_y10rp"]
height = 0.1
radius = 0.4

[sub_resource type="CylinderMesh" id="CylinderMesh_op1cn"]
top_radius = 0.4
bottom_radius = 0.4
height = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0fkoy"]
resource_local_to_scene = true

[sub_resource type="BoxMesh" id="BoxMesh_op1cn"]
size = Vector3(1.1, 0.21, 1.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jo1xs"]
resource_local_to_scene = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_po1ip"]
resource_local_to_scene = true

[node name="Battery" type="Node3D"]
script = ExtResource("1_bavnn")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("BoxMesh_y3gtc")
surface_material_override/0 = SubResource("StandardMaterial3D_a63ku")

[node name="BatteryMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(4.37114e-08, 8.74228e-08, 1, 3.82137e-15, -1, 8.74228e-08, 1, 0, -4.37114e-08, 0, 0, 0)
mesh = ExtResource("2_ytmnr")
surface_material_override/0 = SubResource("StandardMaterial3D_7fgwr")
surface_material_override/1 = SubResource("StandardMaterial3D_kssdw")

[node name="Position1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="Position2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)

[node name="Normal1" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Normal2" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_ytmnr")
surface_material_override/0 = SubResource("StandardMaterial3D_op1cn")

[node name="Wires" type="Node3D" parent="."]

[node name="Obstruction" type="StaticBody3D" parent="." groups=["obstruction"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Obstruction"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.98023e-08, 0, -2.98023e-08)
shape = SubResource("BoxShape3D_op1cn")

[node name="Rewind" type="StaticBody3D" parent="." groups=["rewind"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Rewind"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -6.55671e-09, -0.1)
shape = SubResource("CylinderShape3D_y10rp")

[node name="RewindButtonMesh" type="MeshInstance3D" parent="Rewind"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0.1)
mesh = SubResource("CylinderMesh_op1cn")
surface_material_override/0 = SubResource("StandardMaterial3D_0fkoy")

[node name="Sprite3D" type="Sprite3D" parent="Rewind"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.2)
flip_h = true
pixel_size = 0.025
texture_filter = 0
texture = ExtResource("4_op1cn")

[node name="Terminal1" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 1.5, 0, 0)
mesh = SubResource("BoxMesh_op1cn")
surface_material_override/0 = SubResource("StandardMaterial3D_jo1xs")

[node name="Terminal2" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -1.5, 0, 0)
mesh = SubResource("BoxMesh_op1cn")
surface_material_override/0 = SubResource("StandardMaterial3D_po1ip")
